# dde-clipboard

./: CMakeLists.txt
dde-clipboard/: mainwindow.cpp
dde-clipboard-daemon/: clipboarddaemon.cpp  clipboardloader.cpp
dde-clipboard-daemon/wlrintegration/: dwaylandmimedata.cpp  dwaylandmimedata.h  wlrdatacontrolclipboardinterface.cpp  wlrdatacontrolclipboardinterface.h
debian/: control  rules
